<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="default_clock_style">digital</string>
    <string name="app_label">Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">Delete this alarm?</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Alarm Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after %d minutes.</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for %d minutes.</string>
    <string name="alarm_alert_snooze_until">Snoozing until %s</string>
    <string name="day">1 day</string>
    <string name="days">%s days</string>
    <string name="hour">1 hour</string>
    <string name="hours">%s hours</string>
    <string name="minute">1 minute</string>
    <string name="minutes">%s minutes</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Choose a clock</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="help">help</string>
    <string name="settings">Settings</string>
    <string name="snooze_duration_title">Snooze length</string>
    <string name="auto_silence_title">Silence after</string>
    <string name="auto_silence_summary">%d minutes</string>
    <string name="auto_silence_never">Never</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <string name="alarm_notify_snooze_label">%s (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for %s. Touch to cancel.</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock display</string>
    <string name="label_description">Label</string>
    <string name="ringtone_description">Ringtone</string>
    <string name="battery_charging_level">%d%%</string>
    <string name="weather_fetch_failure">"Weather information isn't available right now."</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="loading_ringtone">Loading ringtone…</string>
    <string name="timer_ring_service_desc">Sound playback service for timers set in Clock.</string>
    <string name="control_set_alarm">Set alarm</string>
    <string name="control_set_alarm_with_existing">%s</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="button_alarms">Alarms</string>
    <string name="button_cities">Cities</string>
    <string name="button_menu">More options</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_night_mode">Night mode</string>
    <string name="sw_resume_button">Resume</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_stop_button">Stop</string>
    <string name="sw_lap_button">Lap</string>
    <string name="sw_reset_button">Reset</string>
    <string name="sw_share_button">Share</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="zero">0</string>
    <string name="sw_share_main">My time is %s</string>
    <string name="sw_share_laps">Lap times:</string>
    <string name="sw_notification_lap_number">Lap %d</string>
    <string name="timer_add_timer">Add Timer</string>
    <string name="timer_start">Start</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_cancel">Cancel</string>
    <string name="timer_times_up">"Time's up"</string>
    <string name="timer_notification_label">Timer</string>
    <string name="home_label">Home</string>
    <string name="cities_activity_title">Cities</string>
    <string name="alarm_on">ON</string>
    <string name="alarm_off">OFF</string>
    <string name="clock_settings">CLOCK</string>
    <string name="clock_style">Style</string>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="time_picker_set">OK</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="alarm_settings">ALARMS</string>
    <string name="see_all">See all…</string>
    <string name="desk_clock_help_url">http://support.google.com/mobile/?p=clock_main</string>
    <string name="stopwatch_service_desc">Stopwatch service to run the notification.</string>
    <string name="swn_stopped">Stopped</string>
    <string name="description_direction_right">Slide right to dismiss</string>
    <string name="description_direction_left">Slide left to snooze</string>
    <string name="description_direction_up">Slide up to dismiss</string>
    <string name="description_direction_down">Slide down to snooze</string>
    <string name="timer_stopped">Timer stopped</string>
    <string name="timers_stopped">%d timers stopped</string>
    <string name="all_timers_stopped_notif">Touch to see your timers</string>
    <string name="timers_in_use">%d timers</string>
    <string name="next_timer_notif">Next timer: %s</string>
    <string name="screensaver_settings">Dream settings</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Very dim display (for dark rooms)</string>
    <string name="expand_alarm">Expand alarm</string>
    <string name="collapse_alarm">Collapse alarm</string>
    <string name="alarm_undo">undo</string>
    <string name="alarm_deleted">Alarm deleted.</string>
    <string name="slash">/</string>
    <string name="world_day_of_week_label">/ %s</string>
    <string name="next_alarm_description">Next alarm: %s</string>
    <string name="label_unlabeled" />
    <string name="alarms_selected">%d selected</string>
    <string name="deleted_message">Deleted</string>
    <string name="timer_delete_confirmation">Delete this timer?</string>
    <string name="city_delete_confirmation">Remove this city?</string>
    <string name="digital_gadget">Digital clock</string>
    <string name="widget_12_hours_format_h">h</string>
    <string name="widget_12_hours_format_no_ampm_m">:mm</string>
    <string name="widget_12_hours_format_m">:mm<font size="15">aa</font></string>
    <string name="widget_24_hours_format_h">kk</string>
    <string name="widget_24_hours_format_m">:mm</string>
</resources>
