<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.android.deskclock.timer.TimerView android:gravity="top|center" android:id="@id/timer_time_text" android:paddingTop="@dimen/medium_font_padding" android:paddingBottom="@dimen/medium_font_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_weight="2.0">
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:id="@id/hours_ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:layout_gravity="top" android:id="@id/hours_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hours_label" android:singleLine="true" android:contentDescription="@string/hours_label_description" style="@style/label" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:id="@id/minutes_tens" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:id="@id/minutes_ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:id="@id/minutes_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minutes_label" android:singleLine="true" android:contentDescription="@string/minutes_label_description" style="@style/label" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:id="@id/seconds" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_light" />
            <com.android.deskclock.ZeroTopPaddingTextView android:textColor="@color/clock_white" android:ellipsize="none" android:layout_gravity="top" android:id="@id/seconds_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seconds_label" android:singleLine="true" android:contentDescription="@string/seconds_label_description" style="@style/label" />
        </com.android.deskclock.timer.TimerView>
        <ImageButton android:gravity="center" android:layout_gravity="center" android:id="@id/delete" android:background="@drawable/item_background" android:paddingBottom="@dimen/body_font_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_backspace" android:layout_weight="1.0" android:contentDescription="@string/timer_delete" />
    </LinearLayout>
    <View android:background="#28ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="8.0dip" />
    <include android:id="@id/first" layout="@layout/three_keys_view" />
    <include android:id="@id/second" layout="@layout/three_keys_view" />
    <include android:id="@id/third" layout="@layout/three_keys_view" />
    <include android:id="@id/fourth" layout="@layout/three_keys_view" />
    <View android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="16.0dip" />
</LinearLayout>