<?xml version="1.0" encoding="utf-8"?>
<com.android.deskclock.CircleButtonsLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/timer_circle" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/timer_frame" android:layout_width="fill_parent" android:layout_height="@dimen/timer_circle_diameter" android:layout_marginLeft="@dimen/timer_circle_margin" android:layout_marginRight="@dimen/timer_circle_margin">
        <com.android.deskclock.CircleTimerView android:id="@id/timer_time" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.android.deskclock.timer.CountingTimerView android:layout_gravity="center" android:id="@id/timer_time_text" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <FrameLayout android:enabled="true" android:layout_gravity="top|center" android:id="@id/timer_label" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:contentDescription="@string/label">
            <TextView android:enabled="false" android:ellipsize="end" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/timer_label_text" android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:layout_height="56.0dip" android:text="@string/label_unlabeled" android:singleLine="true" style="@style/timer_label" />
            <ImageButton android:enabled="false" android:layout_gravity="center_horizontal" android:id="@id/timer_label_icon" android:background="@null" android:clickable="false" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_label" style="@style/button" />
        </FrameLayout>
        <ImageButton android:layout_gravity="bottom|left|center" android:id="@id/timer_plus_one" android:background="@null" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_plusone" android:contentDescription="@string/timer_plus_one" style="@style/button" />
        <TextView android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/timer_stop" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/timer_stop" android:contentDescription="@string/timer_stop" style="@style/bold_button" />
        <ImageButton android:layout_gravity="bottom|right|center" android:id="@id/timer_delete" android:background="@null" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_delete" android:contentDescription="@string/timer_delete" style="@style/button" />
    </FrameLayout>
</com.android.deskclock.CircleButtonsLinearLayout>