<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/widget_item" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="true">
            <TextClock android:textColor="@color/clock_white" android:gravity="center" android:layout_gravity="center" android:id="@id/leftClock1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/widget_12_hours_format_h" android:format24Hour="@string/widget_24_hours_format_h" style="@style/widget_medium_bold" />
            <TextClock android:textColor="@color/clock_white" android:gravity="center" android:layout_gravity="center" android:id="@id/leftClock2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/widget_12_hours_format_m" android:format24Hour="@string/widget_24_hours_format_m" style="@style/widget_medium_light" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/clock_white" android:ellipsize="end" android:id="@id/city_name_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/label" />
            <TextView android:textColor="@color/clock_gray" android:ellipsize="none" android:id="@id/city_day_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/style_label_space" android:singleLine="true" style="@style/label" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="true">
            <TextClock android:textColor="@color/clock_white" android:gravity="center" android:layout_gravity="center" android:id="@id/rightClock1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/widget_12_hours_format_h" android:format24Hour="@string/widget_24_hours_format_h" style="@style/widget_medium_bold" />
            <TextClock android:textColor="@color/clock_white" android:gravity="center" android:layout_gravity="center" android:id="@id/rightClock2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="@string/widget_12_hours_format_m" android:format24Hour="@string/widget_24_hours_format_m" style="@style/widget_medium_light" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/clock_white" android:ellipsize="end" android:id="@id/city_name_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/label" />
            <TextView android:textColor="@color/clock_gray" android:ellipsize="none" android:id="@id/city_day_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/style_label_space" android:singleLine="true" style="@style/label" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>