<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/clock_background" android:background="@drawable/blackish_transition" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/clock_foreground" android:background="@drawable/blackish_transition" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/desk_clock" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/cities" android:clickable="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <FrameLayout android:id="@id/clock_footer" android:background="@drawable/footer_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_footer_height_neg">
                <View android:background="#28ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:gravity="bottom" android:id="@id/clock_buttons" android:layout_width="fill_parent" android:layout_height="@dimen/button_footer_height">
                    <ImageButton android:layout_gravity="left" android:id="@id/alarms_button" android:background="@drawable/item_background" android:layout_width="64.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_alarm" android:onClick="clockButtonsOnClick" android:contentDescription="@string/button_alarms" style="@style/button" />
                    <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                    <ImageButton android:layout_gravity="center" android:id="@id/cities_button" android:background="@drawable/item_background" android:layout_width="64.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_location" android:onClick="clockButtonsOnClick" android:contentDescription="@string/button_cities" style="@style/button" />
                    <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                    <ImageButton android:layout_gravity="right" android:id="@id/menu_button" android:background="@drawable/item_background" android:layout_width="64.0dip" android:layout_height="fill_parent" android:onClick="clockButtonsOnClick" android:contentDescription="@string/button_menu" style="?android:attr/actionOverflowButtonStyle" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>