<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/timers_list_page" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/timers_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@null" android:dividerHeight="@dimen/timer_divider_height" android:layout_weight="1.0" />
        <FrameLayout android:id="@id/timer_footer" android:background="@drawable/footer_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_footer_height_neg">
            <View android:background="#28ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <ImageButton android:id="@id/timer_add_timer" android:background="@drawable/item_background" android:layout_width="fill_parent" android:layout_height="48.0dip" android:src="@drawable/ic_add" android:contentDescription="@string/timer_add_timer" style="@style/button" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/new_timer_page" android:paddingTop="?android:actionBarSize" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
        <com.android.deskclock.TimerSetupView android:id="@id/timer_setup" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
            <View android:background="#28ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/timer_cancel" android:background="@drawable/item_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/timer_cancel" android:layout_weight="1.0" style="@style/button" />
                <View android:id="@id/timer_button_sep" android:background="#28ffffff" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
                <Button android:id="@id/timer_start" android:background="@drawable/item_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/timer_start" android:layout_weight="1.0" style="@style/button" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>